# ppocr-high-performance

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  ocr_response.py
