[project]
name = "ppocr-high-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "paddleocr>=3.0.0",
    "setuptools>=80.9.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "paddlepaddle==3.0.0",
    "black"
]
production = [
    "paddlepaddle-gpu==3.0.0",
]

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle-gpu" }
paddlepaddle = { index = "paddlepaddle" }

[[tool.uv.index]]
name = "paddlepaddle-gpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118"
explicit = true

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu"
explicit = true
